src/test/ui/polymorphization/type_parameters/functions.stderr
error: item has unused generic parameters
  --> $DIR/functions.rs:14:8
   |
LL | pub fn unused<T>() {
   |        ^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/functions.rs:36:8
   |
LL | pub fn used_substs<T>() {
   |        ^^^^^^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/functions.rs:46:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_impl() {
   |            ^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/functions.rs:52:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_both<G: Default>() {
   |            ^^^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/functions.rs:64:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_fn<G: Default>() {
   |            ^^^^^^^

error: item has unused generic parameters
  --> $DIR/functions.rs:78:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_substs() {
   |            ^^^^^^^^^^^

error: aborting due to 6 previous errors

